--- a/Templates/recipebook.html
+++ b/Templates/recipebook.html
@@ -9,20 +9,25 @@
 </head>
 
 <body>
-    <div class="heading">
-        <h1> My Recipe Book </h1>
-        <p>
-            Click on a recicpe to open it!
-        </p>
+    <img class="bg" src="kitchen_pattern.png" alt="kitchen_image">
+    <div class="real-body">
+        <div class="heading">
+            <h1><strong>My Recipe Book</strong>  </h1>
+            <p><strong>                
+                Click on a recicpe to open it!
+            </strong></p>
+        </div>
+
+        <div class="recipebook">
+            This part will be done with node<br>
+            Sample format: 
+            <ul class="recipe-list">
+                <li><a href="https://www.cookingclassy.com/chicken-curry/">Chicken Curry</a></li>
+                <li><a href="https://www.cookingclassy.com/chicken-curry/">Spaghetti</a></li>
+                <li><a href="https://www.cookingclassy.com/chicken-curry/">Chicken Parmesan</a></li>
+            </ul>
+        </div>
+        <a href="index.html" class="home-link">Home</a>
     </div>
-    
-    <div class="recipebook">
-        This part will be done with node
-        Sample format: 
-        <ul class="recipelist">
-            <li><a href="https://www.cookingclassy.com/chicken-curry/">Chicken Curry</a></li>
-        </ul>
-    </div>
-    <a href="index.html">Home</a>
 </body>
 </html>
