--- a/Templates/index.html
+++ b/Templates/index.html
@@ -9,17 +9,20 @@
 </head>
 
 <body>
-    <div class="heading">
-        <h1> Welcome to My Recipe Book! </h1>
-        <p>
-            Brief Description
-        </p>
+    <img class="bg" src="kitchen_pattern.png" alt="kitchen_image">
+    <div class="real-body">
+        <div class="heading">
+            <h1><strong>Welcome to My Recipe Book!  </strong></h1>
+            <p><strong>            
+                Serach for a term and find delicious recipes to save!
+            </strong></p>
+        </div>
+
+        <form action="results.html" method="POST" class="searchform">
+            Username: &nbsp;&nbsp;&nbsp;<input type="text" name="username" placeholder="Enter username..." class="inputs"/><br>
+            Search Term: <input type="text" name="queryTerm" placeholder="ie. Curry" class="inputs"/><br>
+            <input type="submit" value="Search" class="submit-button"/>
+        </form>
     </div>
-    
-    <form action="results.ejs" method="POST" class="searchform">
-        Username: <input type="text" name="username" placeholder="Enter username..." class="inputs"/><br>
-        Search Term: <input type="text" name="queryTerm" placeholder="ie. Curry" class="inputs"/><br>
-        <input type="submit" value="Search" class="submit-button"/>
-    </form>
 </body>
 </html>
