--- a/Templates copy/index.ejs
+++ b/Templates copy/index.ejs
@@ -9,17 +9,17 @@
 </head>
 
 <body>
-    <div class="heading">
-        <h1> Welcome to My Recipe Book! </h1>
-        <p>
-            Brief Description
-        </p>
+    <img class="bg" src="kitchen_pattern.png" alt="kitchen_image">
+    <div class="real-body">
+        <div class="heading">
+            <h1><strong>Welcome to My Recipe Book!  </strong></h1>
+            <p><strong>            
+                Save recipes in your own personal recipe book!
+            </strong></p>
+        </div>
+        <a href="search_page.ejs"><button id="search" class="index-button">Find Recipes</button></a><br><br>
+        <a href="recipebook.ejs"><button id="recipebook" class="index-button">My Recipes</button></a>
+
     </div>
-    
-    <form action="results.ejs" method="POST" class="searchform">
-        Username: <input type="text" name="username" placeholder="Enter username..." class="inputs"/><br>
-        Search Term: <input type="text" name="queryTerm" placeholder="ie. Curry" class="inputs"/><br>
-        <input type="submit" value="Search" class="submit-button"/>
-    </form>
 </body>
 </html>
