--- a/Templates/index.html
+++ b/Templates/index.html
@@ -14,15 +14,12 @@
         <div class="heading">
             <h1><strong>Welcome to My Recipe Book!  </strong></h1>
             <p><strong>            
-                Serach for a term and find delicious recipes to save!
+                Save recipes in your own personal recipe book!
             </strong></p>
         </div>
+        <a href="search_page.html"><button id="search" class="index-button">Find Recipes</button></a><br><br>
+        <a href="recipebook.html"><button id="recipebook" class="index-button">My Recipes</button></a>
 
-        <form action="results.html" method="POST" class="searchform">
-            Username: &nbsp;&nbsp;&nbsp;<input type="text" name="username" placeholder="Enter username..." class="inputs"/><br>
-            Search Term: <input type="text" name="queryTerm" placeholder="ie. Curry" class="inputs"/><br>
-            <input type="submit" value="Search" class="submit-button"/>
-        </form>
     </div>
 </body>
 </html>
