--- a/Templates/style.css
+++ b/Templates/style.css
@@ -28,13 +28,27 @@ form input {
     margin: 1em;
 }
 
+.index-button {
+    background: darkgreen;
+    border: none; 
+    border-radius: 30em;
+    color: white; 
+    font-size: 20px;
+    padding: 0.8rem;
+}
+
+.index-button:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
 .submit-button {
     background: darkgreen;
     border: none; 
     border-radius: 30em;
     color: white; 
     font-size: 24px;
-    padding: 1rem;
+    padding: 0.8rem;
 }
 
 .submit-button:hover {
