--- a/Templates copy/recipebook.ejs
+++ b/Templates copy/recipebook.ejs
@@ -27,6 +27,6 @@
             <%- recipeList %>
         </ul>
     </div>
-    <a href="index.html">Home</a>
+    <%- homeWebpage %>
 </body>
 </html>
