--- a/Templates copy/results.ejs
+++ b/Templates copy/results.ejs
@@ -29,6 +29,6 @@
         </ul>
         <input type="submit" value="Save" class="submit-button"/>
     </form>
-    <a href="index.html">Home</a>
+    <%- homeWebpage %>
 </body>
 </html>
