changes to server part 2

--- a/Templates copy/results.ejs
+++ b/Templates copy/results.ejs
@@ -16,11 +16,11 @@
         </p>
     </div>
     
-    <form action="recipebook.ejs" method="POST" class="recipeform">
+    <form action="/viewRecipeBook" method="POST" class="recipeform">
         This part will be handled with Node sorta<br>
         Format example: <br>
         <ul>
-            <li>Curry Udon <input type="checkbox" name="recipe1" class="recipe-results"/><br></li>
+            <li>Curry Udon <input type="checkbox" name="recipe1" value="0" class="recipe-results"/><br></li>
         </ul>
         
         NODE LIST: 
