--- a/Templates copy/index.ejs
+++ b/Templates copy/index.ejs
@@ -18,8 +18,7 @@
             </strong></p>
         </div>
         <a href="search_page.ejs"><button id="search" class="index-button">Find Recipes</button></a><br><br>
-        <a href="recipebook.ejs"><button id="recipebook" class="index-button">My Recipes</button></a>
-
+        <a href="search_user.ejs"><button id="recipebook" class="index-button">My Saved Recipes</button></a>
     </div>
 </body>
 </html>
