--- a/Templates/index.ejs
+++ b/Templates/index.ejs
@@ -17,9 +17,8 @@
                 Save recipes in your own personal recipe book!
             </strong></p>
         </div>
-        <a href="search_page.html"><button id="search" class="index-button">Find Recipes</button></a><br><br>
-        <a href="search_user.html"><button id="recipebook" class="index-button">My Saved Recipes</button></a>
-
+        <a href="/searchRecipe"><button id="search" class="index-button">Find Recipes</button></a><br><br>
+        <a href="/findUserRecipes"><button id="recipebook" class="index-button">My Saved Recipes</button></a>
     </div>
 </body>
 </html>
