--- a/Templates/recipebook.ejs
+++ b/Templates/recipebook.ejs
@@ -12,17 +12,11 @@
     <div class="heading">
         <h1> My Recipe Book </h1>
         <p>
-            Click on a recicpe to open it!
+            Click on a recipe to open it!
         </p>
     </div>
     
     <div class="recipebook">
-        This part will be done with node
-        Sample format: 
-        <ul class="recipelist">
-            <li><a href="https://www.cookingclassy.com/chicken-curry/">Chicken Curry</a></li>
-        </ul>
-        
         <ul>
             <%- recipeList %>
         </ul>
