changed API keys

--- a/Templates/recipebook.ejs
+++ b/Templates/recipebook.ejs
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img class="bg" src="kitchen_pattern.png" alt="kitchen_image">
     <div class="heading">
         <h1> My Recipe Book </h1>
         <p>
