--- a/Templates/results.ejs
+++ b/Templates/results.ejs
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <img class="bg" src="kitchen_pattern.png" alt="kitchen_image">
     <div class="heading">
         <h1> Recipe Results based on <%- searchTerm %> </h1>
         <p>
